# motane

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/gb/: CMakeLists.txt
src/gb/include/gb/: gameboy.h  gpu.h  interpreter.h  loader.def  loader.h  memory.h  register.h
src/gb/src/: gameboy.cpp  gpu.cpp  loader.cpp  memory.cpp
src/graphics/: CMakeLists.txt
src/graphics/include/graphics/: framebuffer_soft.h  graphic.h  shader.h  type.h  window.h
src/graphics/include/graphics/ogl/: framebuffer.h
src/graphics/src/: graphic.cpp  shader.cpp  window.cpp
src/io/: CMakeLists.txt
src/io/include/io/: controller.h
src/io/src/: controller.cpp
src/utils/: CMakeLists.txt
src/utils/include/utils/: conv.h  decl.h  log.h  type.h  vector.h
src/utils/src/: conv.cpp  log.cpp
